[package]
name = "struct_iterable_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.13"
quote = "1.0.26"
proc-macro2 = "1.0.56"
erased-serde = "0.3.7"
struct_iterable_internal = { path = "../struct_iterable_internal" }